Inheritance and Abstract Classes Quiz/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\BlueJ\lib\bluejcore.jar;D:\BlueJ\lib\junit-4.11.jar;D:\BlueJ\lib\hamcrest-core-1.3.jar;D:\BlueJ\lib\lang-stride.jar;D:\BlueJ\lib\userlib\pi4j-core.jar;D:\BlueJ\lib\userlib\pi4j-device.jar;D:\BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz
-d
C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz\Bird.java
<---- end of javadoc command ---->
Loading source file C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz\Bird.java...
C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz\Bird.java:24: error: illegal start of expression
        return out;
        ^
C:\Users\Kim\APCS-youngil2473-cmis\Inheritance and Abstract Classes Quiz\Bird.java:24: error: not a statement
        return out;
               ^
2 errors
